[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2021"
license = "MPL-2.0"
publish = false
repository = "https://github.com/Absolucy/aneri"
rust-version = "1.76"
version = "0.1.0"

[workspace.dependencies]
meowtonin = { git = "https://github.com/Absolucy/meowtonin" }
meowtonin-serde = { git = "https://github.com/Absolucy/meowtonin" }
faster-hex = "0.9"
once_cell = "1"
parking_lot = "0.12"

[profile.release]
debug = "full"
lto = "thin"

[profile.dev]
debug = "full"
opt-level = 0
