[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2021"
license = "MPL-2.0"
publish = false
repository = "https://github.com/Absolucy/aneri"
rust-version = "1.81"
version = "0.1.0"

[workspace.dependencies]
ahash = "0.8"
meowtonin = { git = "https://github.com/Absolucy/meowtonin" }
meowtonin-serde = { git = "https://github.com/Absolucy/meowtonin" }
faster-hex = "0.10"
parking_lot = "0.12"
slotmap = "1"

[profile.release]
debug = "full"
lto = "thin"
split-debuginfo = "packed"

[profile.dev]
debug = "full"
opt-level = 0
