[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2021"
license = "MPL-2.0"
publish = false
repository = "https://github.com/Absolucy/aneri"
rust-version = "1.81"
version = "0.1.0"

[workspace.dependencies]
ahash = "0.8"
meowtonin = { path = "C:/Users/Lucy/Code/BYOND/meowtonin/crates/core" }
meowtonin-serde = { path = "C:/Users/Lucy/Code/BYOND/meowtonin/crates/serde" }
faster-hex = "0.10"
parking_lot = "0.12"
slotmap = "1"

[workspace.lints.clippy]
# presets
complexity = "warn"
correctness = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
# individual lints
assigning_clones = "warn"
create_dir = "warn"
default_trait_access = "warn"
inefficient_to_string = "warn"
redundant_type_annotations = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
string_to_string = "warn"

[profile.release]
debug = "full"
lto = "thin"
split-debuginfo = "packed"
codegen-units = 1

[profile.dev]
debug = "full"
opt-level = 0
