[package]
name = "aneri"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
aneri-audio = { path = "../audio", optional = true }
aneri-crypto = { path = "../crypto", optional = true }
aneri-dmi = { path = "../dmi", optional = true }
aneri-encode = { path = "../encode", optional = true }
aneri-experiments = { path = "../experiments", optional = true }
aneri-file = { path = "../file", optional = true }
aneri-http = { path = "../http", optional = true }
aneri-logger = { path = "../logger", optional = true }
aneri-rand = { path = "../rand", optional = true }
aneri-regex = { path = "../regex", optional = true }
aneri-sort = { path = "../sort", optional = true }
aneri-sql = { path = "../sql", optional = true }
aneri-time = { path = "../time", optional = true }
aneri-util = { path = "../util", optional = true }
meowtonin = { workspace = true }
const_format = "0.2"

[build-dependencies]
bosion = "1"

[features]
default = ["audio", "crypto", "dmi", "encode", "file", "logger", "rand", "regex", "time", "util"]
# sub-crates
all = ["audio", "crypto", "dmi", "encode", "experiments", "file", "logger", "rand", "regex", "time", "util"]
audio = ["aneri-audio"]
crypto = ["aneri-crypto"]
dmi = ["aneri-dmi"]
encode = ["aneri-encode"]
experiments = ["aneri-experiments"]
file = ["aneri-file"]
logger = ["aneri-logger"]
rand = ["aneri-rand"]
regex = ["aneri-regex"]
time = ["aneri-time"]
util = ["aneri-util"]
# modules that aren't ready or working yet
http = ["aneri-http"]
sort = ["aneri-sort"]
sql = ["aneri-sql"]
# misc features
ref-debugging = ["meowtonin/ref-debugging"]
tracy = ["meowtonin/tracy"]
