[package]
name = "aneri-audio"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
meowtonin = { workspace = true }
symphonia = { version = "0.5", default-features = false, features = ["all-codecs"] }
