[package]
name = "aneri-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
meowtonin = { workspace = true }
parking_lot = { workspace = true, optional = true }
slotmap = { workspace = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
runtime = ["tokio", "parking_lot"]
