[package]
name = "aneri-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
meowtonin = { workspace = true }
blake3 = { version = "1", features = ["traits-preview"] }
crc32c = "0.6"
crc32fast = "1"
digest = "0.10"
faster-hex = { workspace = true }
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64", "xxh3"] }
totp-rs = "5"
parking_lot = { workspace = true }

# rust-crypto asm doesn't compile correctly on MSVC, so it's only enabled for non-MSVC targets.
[target.'cfg(not(target_env = "msvc"))'.dependencies.md-5]
version = "0.10"
features = ["asm"]

[target.'cfg(not(target_env = "msvc"))'.dependencies.sha1]
version = "0.10"
features = ["asm"]

[target.'cfg(not(target_env = "msvc"))'.dependencies.sha2]
version = "0.10"
features = ["asm"]

[target.'cfg(not(target_env = "msvc"))'.dependencies.sha3]
version = "0.10"
features = ["asm"]
