[package]
name = "aneri-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
meowtonin = { workspace = true }
blake3 = { version = "1", features = ["traits-preview"] }
crc32c = "0.6"
crc32fast = "1"
digest = "0.10"
faster-hex = { workspace = true }
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64", "xxh3"] }
totp-rs = "5"
parking_lot = { workspace = true }
