[package]
name = "aneri-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
meowtonin = { workspace = true }
blake3 = { version = "=1.8.5", features = ["traits-preview"] }           # keeping this pinned bc traits-preview can cause issues(tm)
crc32c = "0.6"
crc32fast = "1"
digest = "0.11"
faster-hex = { workspace = true }
md-5 = "0.11"
sha1 = "0.11"
sha2 = "0.11"
sha3 = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64", "xxh3"] }
totp-rs = "5"
parking_lot = { workspace = true }
