[package]
name = "aneri-dmi"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
meowtonin = { workspace = true }
dmi = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
