[package]
name = "aneri-encode"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
meowtonin = { workspace = true }
percent-encoding = "2"
data-encoding = "2"
faster-hex = { workspace = true }
form_urlencoded = "1"

[lints]
workspace = true
