[package]
name = "aneri-http"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
meowtonin = { workspace = true }
ureq = { version = "3.0.0-rc1", default-features = false, features = ["gzip", "brotli"] }

[features]
default = ["rustls"]
rustls = ["ureq/rustls"]
native-tls = ["ureq/native-tls"]

[lints]
workspace = true
