[package]
name = "aneri-logger"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ahash = "0.8"
meowtonin = { workspace = true }
chrono = "0.4"
crossbeam-channel = "0.5"
parking_lot = { workspace = true }
scopeguard = "1"
thread-priority = "1"
