[package]
name = "aneri-logger"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
ahash = { workspace = true }
crossbeam-channel = "0.5"
meowtonin = { workspace = true }
parking_lot = { workspace = true }
thread-counter = "0.1"
thread-priority = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
