[package]
name = "aneri-pathfind"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ahash = "0.8"
meowtonin = { workspace = true }
pathfinding = "4"
bitflags = "2"
ordered-float = "4"
grid = "0.15"
