[package]
name = "aneri-rand"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ahash = { workspace = true }
aneri-core = { path = "../core" }
meowtonin = { workspace = true }
parking_lot = { workspace = true }
rand = "0.8"
rand-wyrand = "0.1"
rand_blake3 = "1"
slotmap = { workspace = true }
