[package]
name = "aneri-rand"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
rustc-hash = { workspace = true }
aneri-core = { path = "../core" }
meowtonin = { workspace = true }
parking_lot = { workspace = true }
rand = "0.10"
