[package]
name = "aneri-regex"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ahash = "0.8"
aneri-core = { path = "../core" }
lru = "0.12"
meowtonin = { workspace = true }
parking_lot = { workspace = true }
regex = "1"
serde = { version = "1", features = ["derive"] }
slotmap = { workspace = true }
