[package]
name = "aneri-sql"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aneri-core = { path = "../core", features = ["runtime"] }
slotmap = "1"
meowtonin = { workspace = true }
meowtonin-serde = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
static_init = "1"
mysql_async = { version = "0.33", default-features = false, features = ["minimal"] }

[features]
default = ["native-tls"]
native-tls = ["mysql_async/default"]
rustls = ["mysql_async/default-rustls"]
