[package]
name = "aneri-sql"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ahash = "0.8"
aneri-core = { path = "../core", features = ["runtime"] }
meowtonin = { workspace = true }
meowtonin-serde = { workspace = true }
mysql_async = { version = "0.33", default-features = false, features = ["minimal"] }
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slotmap = { workspace = true }
crossbeam-channel = "0.5"
static_init = "1"

[features]
default = ["native-tls"]
native-tls = ["mysql_async/default"]
rustls = ["mysql_async/default-rustls"]
