[package]
name = "aneri-sql"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ahash = "0.8"
aneri-core = { path = "../core" }
meowtonin = { workspace = true }
meowtonin-serde = { workspace = true }
mysql = { git = "https://github.com/ZeWaka/rust-mysql-simple.git", tag = "v25.0.1", default-features = false, optional = true }
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slotmap = { workspace = true }
crossbeam-channel = "0.5"
static_init = "1"

[features]
default = ["rustls"]
rustls = ["mysql/default-rustls"]
native-tls = ["mysql/default"]
