[package]
name = "aneri-time"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aneri-core = { path = "../core", features = ["runtime"] }
meowtonin = { workspace = true }
parking_lot = { workspace = true }
slotmap = { workspace = true }
time = { version = "0.3", features = ["formatting", "macros"] }
