[package]
name = "aneri-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
meowtonin = { workspace = true }
meowtonin-serde = { workspace = true }
once_cell = "1"
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "fast-rng"] }
cuid2 = "0.1"
