[package]
name = "aneri-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
cuid2 = "0.1"
deunicode = "1"
meowtonin = { workspace = true }
meowtonin-serde = { workspace = true }
serde_json = "1"
strsim = "0.11"
toml = "0.8"
uuid = { version = "1", features = ["v4", "fast-rng"] }
